# job-agent-sprint1

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  PROGRESS.md  README.md  START_PROMPT.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  crewai-implementer.md  doc-summarizer.md  scraper-researcher.md
docs/: legal.md  sources.md
src/job_agent/: __init__.py  config.py
src/job_agent/agents/: base_agent.py  scout_agent.py
src/job_agent/db/: client.py
src/job_agent/db/migrations/: 001_init.sql  002_retention.sql
src/job_agent/models/: job.py
src/job_agent/tools/: arbeitsagentur_client.py  job_normalizer.py  jsearch_client.py  observability_store.py  run_context.py
tests/: conftest.py  test_config.py
tests/agents/: test_base_agent.py  test_scout_agent.py
tests/db/: test_client.py
tests/models/: test_job.py
tests/tools/: conftest.py  test_arbeitsagentur_client.py  test_job_normalizer.py
