[project]
name = "job-agent"
version = "0.1.0"
description = "Automated Job Application Agent (CrewAI + Playwright + Supabase)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.80",
    "langchain-openai>=0.2",
    "playwright>=1.47",
    "python-docx>=1.1",
    "pypdf>=4.3",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "supabase>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
